# proposal-gen

./: .env  .gitignore  README.md  docs.txt  main.py  pyproject.toml  requirements.txt
proposals/: __init__.py
proposals/api/: __init__.py  routes.py
proposals/engine/: __init__.py  generator.py  llm.py  questions.py
proposals/storage/: __init__.py  session.py
proposals/templates/: base_proposal.j2
proposals/validation/: __init__.py  validator.py
tests/: __init__.py  test_basic.py
